# siftwise

./: .gitignore  LICENSE  Manifest.csv  README.md  pyproject.toml  requirements.txt
docs/: ROADMAP.md
logs/: RunLog_20251106_005729.csv  RunLog_20251106_005730.csv
siftwise/: schemas.py  suggest-to-move.py
siftwise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
siftwise/analyze/: analyzer.py  cohesion.py  detectors.py  entities.py  structure_draft.py  tokens.py
siftwise/commands/: cli.py  draft_structure.py  execute.py  promote_suggested.py  refine_residuals.py  review_structure.py
siftwise/execute/: executor.py  journaling.py
siftwise/rules/: rules.yaml
siftwise/state/: __init__.py  io.py
siftwise/strategy/: __init__.py  entities.py  planner.py  preserve.py  residuals.py  rules_engine.py  search.py
siftwise/undo/: undo.py
