[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siftwise"
version = "0.1.0"
description = "Siftwise MVP"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0"]

[project.scripts]
sift = "siftwise.commands.cli:main"

[tool.setuptools.packages.find]
include = ["siftwise*"]
exclude = ["data*", "logs*", "tests*"]

